clusters/xs4/kube/dashboard/homer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homer-service
spec:
  selector:
    app: homer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
