clusters/xs4/kube/dashboard/homer/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer-ingress
  annotations: 
    # Due to global whitelisting we need to override restricted access.
    # To use whitelisting/override global whitelisting use the row below:
    nginx.ingress.kubernetes.io/whitelist-source-range: "0.0.0.0/0"
    
    # Lets use letsencrypt
    cert-manager.io/cluster-issuer: "letsencrypt-staging"

    # Force SSL
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - hub.groeneveld.xyz
      secretName: homer-tls
  ingressClassName: nginx
  rules:
    - host: hub.groeneveld.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homer-service
                port:
                  number: 80
